--- a/index.html
+++ b/index.html
@@ -79,32 +79,32 @@
 <div class="row align-items-center">
     <div class="col-lg-2">
        <div class="logos">
-	    <img src="client-1.png">
+	    <img src="images/client-1.png">
        </div>
      </div>
     <div class="col-lg-2">
        <div class="logos">
-	     <img src="client-2.png">
+	     <img src="images/client-2.png">
        </div>
     </div>
     <div class="col-lg-2">
        <div class="logos">
-	     <img src="client-3.png">
+	     <img src="images/client-3.png">
        </div>
     </div>
     <div class="col-lg-2">
        <div class="logos">
-	     <img src="client-5.png">
+	     <img src="images/client-5.png">
        </div> 
      </div>
     <div class="col-lg-2">
        <div class="logos">
-	     <img src="client-6.png">
+	     <img src="images/client-6.png">
        </div>
     </div>
     <div class="col-lg-2">
         <div class="logos">
-		   <img src="client-8.png">
+		   <img src="images/client-8.png">
         </div>
     </div>
  </div>
@@ -237,7 +237,7 @@
 		</div>
            <div class="col-lg-6">		
              <div class="picture-content">
-			 <img src="tabs-1.jpg">
+			 <img src="images/tabs-1.jpg">
 	     	 </div>
 			</div>
      </div>
