--- a/index.html
+++ b/index.html
@@ -198,22 +198,27 @@
  <div class="row">
        <div class="col-lg-3">
          <div class="tab-content1">
-		 <a href="#" class="tab-a"><i class="fa-solid fa-circle-half-stroke"></i>Modi sit est dela pireda nest</a>
+		 <div class="active">
+		 <a href="#" class="tab-a"><i class="fa-solid fa-circle-half-stroke"></i>
+		 <p>Modi sit est dela pireda nest</p></a>
+	     </div>
+		 </div>
+	   </div>
+	   <div class="col-lg-3">
+         <div class="tab-content1">
+		 <a href="#" class="tab-a"><i class="fa-solid fa-qrcode"></i>
+		 <p>Unde praesenti mara setra le</p></a>
 	     </div>
 	   </div>
 	   <div class="col-lg-3">
          <div class="tab-content1">
-		 <a href="#" class="tab-a"><i class="fa-solid fa-qrcode"></i>Unde praesenti mara setra le</a>
+		 <a href="#" class="tab-a"><i class="fa-solid fa-circle-half-stroke"></i><p>Pariatur explica nitro dela</p></a>
 	     </div>
 	   </div>
 	   <div class="col-lg-3">
          <div class="tab-content1">
-		 <a href="#" class="tab-a"><i class="fa-solid fa-circle-half-stroke"></i>Pariatur explica nitro dela</a>
-	     </div>
-	   </div>
-	   <div class="col-lg-3">
-         <div class="tab-content1">
-		 <a href="#" class="tab-a"><i class="fa-solid fa-store"></i>Nostrum qui dile node</a>
+		 <a href="#" class="tab-a"><i class="fa-solid fa-store"></i>
+		 <p>Nostrum qui dile node</p></a>
 	     </div>
 	   </div>
 </div>
@@ -246,17 +251,11 @@
 
 <section class="service">
 <div class="container">
-        <div class="portfolio-menu">
-         <div class="col-lg-4">
-		  <div class="portfolio-tab">
-		    <h1>SERVICES</h1>
-		  <div class="border">
-		  </div>
-		  </div>
-		  </div>
-		  </div>
         <div class="col-lg-12">
 	       <div class="service-text">
+		       	<h1>SERVICES</h1>
+		         <div class="border">
+		         </div>
 		     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
 		   </div>
 		</div>
@@ -480,13 +479,31 @@
 
 <section class="portfolio">
  <div class="container">
+         <div class="portfolio-menu">
+         <div class="col-lg-4">
+		  <div class="portfolio-tab1">
+		    <h1>PRICING</h1>
+			<div class="border">
+		  </div>
+		  </div>
+		  </div>
+		  </div>
          <div class="col-lg-12">
 	       <div class="portfolio-text">
+		         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
 		   </div>
 		   </div>						
 		<div class="row">
 		    <div class="col-lg-4">
 		      <div class="price-tag">
+			      <p class="prc1"> FREE</p>
+                   <p class="prc1">$0 / month</p>
+                  <p class="prc1"> Aida dere</p>
+                   <p class="prc1">Nec feugiat nisl</p>
+                  <p class="prc1"> Nulla at volutpat dola</p>
+                   <p class="prc1">Pharetra massa</p>
+                   <p class="prc1">Massa ultricies mi</p>
+			  
 			  </div>
 			</div>  	
 			<div class="col-lg-4">
