--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	   </div>
 	   <div class="col-lg-3">
          <div class="tab-content1">
-		 <a href="#" class="tab-a"><i class="fa-solid fa-circle-half-stroke"></i><p>Pariatur explica nitro dela</p></a>
+		 <a href="#" class="tab-a"><i class="fa-solid fa-sun"></i><p>Pariatur explica nitro dela</p></a>
 	     </div>
 	   </div>
 	   <div class="col-lg-3">
@@ -233,9 +233,9 @@
             <h2>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda</h2>
             <p class="p1">Lorem ipsum dolor sit amet,consectetur adipiscing elit ,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
             <ul>
-            <li><i class="fa-regular fa-circle-check"></i>Ullamco laboris nisi ut aliquip ex ea commoda consequat.</li>
-            <li><i class="fa-regular fa-circle-check"></i>Duis aute irure dolor in reprehenderit in voluptate velit</li>
-            <li><i class="fa-regular fa-circle-check"></i> Ullamco laboris nisi ut aliquip ex ea commoda consequat.Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastrio dolore eu fugiat nulla pariatur.</li>
+            <li><i class="fa-solid fa-check-double"></i>Ullamco laboris nisi ut aliquip ex ea commoda consequat.</li>
+            <li><i class="fa-solid fa-check-double"></i>Duis aute irure dolor in reprehenderit in voluptate velit</li>
+            <li><i class="fa-solid fa-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commoda consequat.Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastrio dolore eu fugiat nulla pariatur.</li>
             </ul>
             <p class="p2">Ullamco laboris nisi ut aliquip ex ea commoda consequat.Duis aute irure dolor in reprehenderit in voluptate </p>		 
           </div>
