--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
          <div class="col-lg-4">
 		  <div class="portfolio-tab1">
 		    <h1>PORTFOLIO</h1>
-			<div class="border">
+			<div class="border1">
 		  </div>
 		  </div>
 		  </div>
@@ -409,17 +409,11 @@
 			
 <section class="portfolio">
  <div class="container">
-        <div class="portfolio-menu">
-         <div class="col-lg-4">
-		  <div class="portfolio-tab1">
-		    <h1>TESTIMONIALS</h1>
-			<div class="border">
-		  </div>
-		  </div>
-		  </div>
-		  </div>
          <div class="col-lg-12">
 	       <div class="portfolio-text">
+		   <h1>TESTIMONIALS</h1>
+			<div class="border">
+		  </div>
 		   <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
 		   </div>
 		   </div>			
@@ -479,17 +473,12 @@
 
 <section class="portfolio">
  <div class="container">
-         <div class="portfolio-menu">
-         <div class="col-lg-4">
-		  <div class="portfolio-tab1">
-		    <h1>PRICING</h1>
-			<div class="border">
-		  </div>
-		  </div>
-		  </div>
-		  </div>
+
          <div class="col-lg-12">
 	       <div class="portfolio-text">
+		   <h1>PRICING</h1>
+			<div class="border">
+		  </div>
 		         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
 		   </div>
 		   </div>						
