--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 		    <div class="col-lg-4">
 		      <div class="price-tag">
 			      <p class="prc1"> FREE</p>
-                  <p class="prc1">$0/month</p>
+                  <p class="prc1"><sup>$</sup>0/month</p>
                   <p class="prc1"> Aida dere</p>
                   <p class="prc1">Nec feugiat nisl</p>
                   <p class="prc1"> Nulla at volutpat dola</p>
@@ -566,7 +566,7 @@
 			<div class="col-lg-4">
 		      <div class="price-tag-1">
 			       <p class="prc1"> BUSINESS</p>
-                   <p class="prc1">$19/month</p>
+                   <p class="prc1"><sup>$</sup>19/month</p>
                    <p class="prc1"> Aida dere</p>
                    <p class="prc1">Nec feugiat nisl</p>
                    <p class="prc1"> Nulla at volutpat dola</p>
@@ -578,7 +578,7 @@
 			<div class="col-lg-4">
 		      <div class="price-tag">
 			      <p class="prc1"> DEVELOPER</p>
-                  <p class="prc1">$29/month</p>
+                  <p class="prc1"><sup>$</sup>29/month</p>
                   <p class="prc1"> Aida dere</p>
                   <p class="prc1">Nec feugiat nisl</p>
                   <p class="prc1"> Nulla at volutpat dola</p>
