--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         <div class="banner-content">
 		  <h1>Bettter digital experience with Presento</h1>
 		  <p>We are team of talented designers making websites with Bootstrap</p>
-		  
 		  <a href="#" class="btns1">Get Started</a>
 					   
         </div>
@@ -881,6 +880,10 @@
   </div>
     <div class="col-lg-5">
   <div class="info3">
+  <h3>Join Our Newsletter</h3>
+  <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+  <input type="email" id="fname" name="fname">
+  <input type="submit" id="submit" value="Subscribe">
   </div>
   </div>
 	</div>
