--- a/index.html
+++ b/index.html
@@ -882,8 +882,10 @@
   <div class="info3">
   <h3>Join Our Newsletter</h3>
   <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+  <div class="frm">
   <input type="email" id="fname" name="fname">
-  <input type="submit" id="submit" value="Subscribe">
+  <a href="#" class="btns5">Subscribe</a>
+  </div>
   </div>
   </div>
 	</div>
