--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="responsive.css">
 <script src="https://kit.fontawesome.com/49e7c8215c.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,12 +16,12 @@
 <header class="header">
 <div class="container">
 <div class="row align-items-center">
-    <div class="col-lg-3">
+    <div class="col-6 col-lg-3">
       <div class="logo">
 	     <a href="#">Presento<span>.</span> </a>
       </div>
     </div>
-    <div class="col-lg-9">
+    <div class="col-lg-9 d-xs-none">
        <div class="navbar">
 	      <ul class="menu-bar">
 		     <li><a href="index.html" class="nav-list active">Home</a></li>
@@ -76,32 +77,32 @@
 <section class="client">
 <div class="container">
 <div class="row align-items-center">
-    <div class="col-lg-2">
+    <div class="col-6 col-lg-2">
        <div class="logos">
 	    <img src="images/client-1.png">
        </div>
      </div>
-    <div class="col-lg-2">
+    <div class="col-6 col-lg-2">
        <div class="logos">
 	     <img src="images/client-2.png">
        </div>
     </div>
-    <div class="col-lg-2">
+    <div class="col-6 col-lg-2">
        <div class="logos">
 	     <img src="images/client-3.png">
        </div>
     </div>
-    <div class="col-lg-2">
+    <div class="col-6 col-lg-2">
        <div class="logos">
 	     <img src="images/client-5.png">
        </div> 
      </div>
-    <div class="col-lg-2">
+    <div class="col-6 col-lg-2">
        <div class="logos">
 	     <img src="images/client-6.png">
        </div>
     </div>
-    <div class="col-lg-2">
+    <div class="col-6 col-lg-2">
         <div class="logos">
 		   <img src="images/client-8.png">
         </div>
@@ -160,28 +161,28 @@
 <section class="tab">
 <div class="container">
  <div class="row">
-       <div class="col-lg-3">
+       <div class="col-12 col-lg-3">
          <div class="tab-content">
 		 <i class="fa-regular fa-face-smile"></i>
 		 <h1>232</h1>
 		 <p>Happy Clients</p>
 	     </div>
 	   </div>
-	   <div class="col-lg-3">
+	   <div class="col-12 col-lg-3">
          <div class="tab-content">
 		 <i class="fa-solid fa-book"></i>
 		 <h1>521</h1>
 		 <p>Projects</p>
 	     </div>
 	   </div>
-	   <div class="col-lg-3">
+	   <div class="col-12 col-lg-3">
          <div class="tab-content">
 		 <i class="fa-solid fa-headset"></i>
 		 <h1>1463</h1>
 		 <p>Hours Of Support</p>
 	     </div>
 	   </div>
-	   <div class="col-lg-3">
+	   <div class="col-12 col-lg-3">
          <div class="tab-content">
 		 <i class="fa-solid fa-person"></i>
 		 <h1>15</h1>
@@ -820,7 +821,7 @@
 			   <input type="text" id="fname" name="fname" placeholder="Subject">
 			 </div>
 			 <div class="msg">
-			   <textarea id="fname" name="fname"  placeholder="Message">
+			   <textarea type ="text" id="fname" name="fname" placeholder="Message">
 			   </textarea>
 			 </div>
 			 <div class="btn">
@@ -839,9 +840,11 @@
 <section class="explore">	
 <div class="container">	
  <div class="row">	
-  <div class="col-lg-3">
+  <div class="col-lg-2">
   <div class="info">
     <h3>Presento<span>.</span></h3>
+	<div class="border2">
+	</div>
     <p>A108 Adam Street</p>
     <p>New York, NY 535022</p>
      <p class="ip1">United States</p>
@@ -853,8 +856,8 @@
 	  <div class="col-lg-2">
   <div class="info1">
      <h4>Useful Links</h4>
-	 <div class="bodr">
-	 </div>
+	 <div class="border2">
+	</div>
 	   <a href="#">  
         <p><i class="fa-solid fa-angle-right"></i>Home</p>
         <p><i class="fa-solid fa-angle-right"></i>About us</p>
@@ -864,11 +867,11 @@
 		</a>
   </div>
   </div>
-    <div class="col-lg-2">
+    <div class="col-lg-3">
   <div class="info1">
       <h4>Our Services</h4>
-	 <div class="bodr">
-	 </div>
+	 <div class="border2">
+	</div>
 	   <a href="#">  
         <p><i class="fa-solid fa-angle-right"></i>Web Design</p>
         <p><i class="fa-solid fa-angle-right"></i>Web Development</p>
@@ -881,6 +884,8 @@
     <div class="col-lg-5">
   <div class="info3">
   <h3>Join Our Newsletter</h3>
+  <div class="border2">
+	</div>
   <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
   <div class="frm">
   <input type="email" id="fname" name="fname">
