--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 		<div class="row">
 		    <div class="col-im-12 col-lg-4">
 		      <div class="portfolio-image1">
-			  <div class="row">
+			  <div class="run">
 			    <div class="timage">
 			   <img src="images/testimonials-1.jpg">
 			   </div>
@@ -504,7 +504,7 @@
 			
 			<div class="col-im-12 col-lg-4">
 		      <div class="portfolio-image1">
-			  <div class="row">
+			  <div class="run">
 			  	<div class="timage">
 			   <img src="images/testimonials-4.jpg">
 			   </div>
@@ -521,7 +521,7 @@
 			
 			<div class="col-im-12 col-lg-4">
 		      <div class="portfolio-image1">
-			  <div class="row">
+			  <div class="run">
 			  <div class="timage">
 			  <img src="images/testimonials-5.jpg">
 			</div>
@@ -760,6 +760,7 @@
 		
 	<div class="row">
         <div class="col-rs-6 col-im-12 col-lg-6">
+		  <div class="row">
             <div class="col-lg-12">
                <div class="contact-address">	
 			   <i class="fa-solid fa-location-dot"></i>
@@ -767,7 +768,6 @@
 			   <p>A108 Adam Street, New York, NY 535022</p>
                </div>			   
             </div>	
-         <div class="row">
 		    <div class="col-lg-6">
 			  <div class="email">
 			  <i class="fa-regular fa-envelope"></i>
@@ -791,20 +791,28 @@
 		 <div class="form">
 		 
 		  <div class="row">
+		    <div class="col-lg-6">
 		     <div class="name">
 			   <input type="text" id="fname" name="fname" placeholder="YOUR NAME">
 			 </div>
+			 </div>
+			 <div class="col-lg-6">
 			 <div class="mail">
 			    <input type="email" id="fname" name="fname" placeholder="YOUR EMAIL">
 			 </div>
 			 </div>
+			 </div>
+			 <div class="col-lg-12">
 			 <div class="subject">
 			   <input type="text" id="fname" name="fname" placeholder="Subject">
 			 </div>
+			 </div>
+			 <div class="col-lg-12">
 			 <div class="msg">
 			   <textarea type ="text" id="fname" name="fname" placeholder="Message">
 			   </textarea>
 			 </div>
+
 			 <div class="btn">
 			 <a href="#" class="btns5">Send Message</a>
 		 </div>
@@ -821,7 +829,7 @@
 <section class="explore">	
 <div class="container">	
  <div class="row">	
-  <div class="col-rs-2 col-im-6 col-lg-2">
+  <div class="col-rs-2 col-im-6 col-lg-3">
   <div class="info">
     <h3>Presento<span>.</span></h3>
 	<div class="border2">
@@ -841,9 +849,17 @@
 	</div>
 	   <a href="#">  
         <p><i class="fa-solid fa-angle-right"></i>Home</p>
+		</a>
+		<a href="#">
         <p><i class="fa-solid fa-angle-right"></i>About us</p>
+		</a>
+		<a href="#">
         <p><i class="fa-solid fa-angle-right"></i>Services</p>
+		</a>
+		<a href="#">
         <p><i class="fa-solid fa-angle-right"></i>Terms of service</p>
+		</a>
+		<a href="#">
         <p><i class="fa-solid fa-angle-right"></i>Privacy policy</p>
 		</a>
   </div>
@@ -855,14 +871,22 @@
 	</div>
 	   <a href="#">  
         <p><i class="fa-solid fa-angle-right"></i>Web Design</p>
+		</a>
+		<a href="#">
         <p><i class="fa-solid fa-angle-right"></i>Web Development</p>
+		</a>
+		<a href="#">
         <p><i class="fa-solid fa-angle-right"></i>Product Management</p>
+		</a>
+		<a href="#">
         <p><i class="fa-solid fa-angle-right"></i>Marketing</p>
+		</a>
+		<a href="#">
         <p><i class="fa-solid fa-angle-right"></i>Graphic Design</p>
 		</a>
   </div>
   </div>
-    <div class="col-rs-5 col-im-6 col-lg-5">
+    <div class="col-rs-5 col-im-6 col-lg-4">
   <div class="info3">
   <h3>Join Our Newsletter</h3>
   <div class="border2">
@@ -870,7 +894,7 @@
   <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
   <div class="frm">
   <input type="email" id="fname" name="fname">
-  <a href="#" class="btns5">Subscribe</a>
+  <button href="#" class="btns5">Subscribe</button>
   </div>
   </div>
   </div>
