--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
     </div>
 	
 	
-    <div class="col-lg-4">
+    <div class="col-lg-4 col-im-6">
        <div class="navbar1">
 	           <a href="#"><i class="fa-brands fa-twitter"></i></a>
 			   <a href="#"><i class="fa-brands fa-facebook"></i></a>
