--- a/index.html
+++ b/index.html
@@ -907,8 +907,8 @@
 <div class="row justify-content align-items-center">
     <div class="col-lg-4">
       <div class="logoss">
-         <p>© Copyright <b>Presento.</b> All Rights Reserved</p>
-          <p> Designed by <a href="#">BootstrapMade</a><p>
+         <!--<p>© Copyright <b>Presento.</b> All Rights Reserved</p>-->
+          <p> Designed by <a href="#">T.Mugilan</a><p>
       </div>
     </div>
 	
